main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

body{
    font-family: 'Poppins', sans-serif;
}
*{
    padding: 0;
    margin: 0;
}

.title{
    margin-top: 2rem;
    text-align: center;
}

.content{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 16px;
    gap: 1rem;

}

.gifContainer{
    clip-path: circle();
}

#cat-heart-gif{
    width: auto;
    height: 350px;
}

.buttonContainer{
    display: flex;
    gap: 2rem;
}

.buttonContainer button{
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    font-size: 1rem;
    width: 9rem;
    height: 4rem;
    padding: 0.35rem;
    border-radius: 8px;
    font-weight: bold;
}

#yes-btn{
    color: black;
    background-color: #89FF77;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

#no-btn{
    color: black;
    background-color: #FF6161;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

/* Pop-up Dialogs on button click */
.no-dialog, .yes-dialog {
    display: none; /* This gets chaned to display: flex onClick() */
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute; 
    padding: 12px;
    gap: 1rem; /* Gap between gif & text underneath */
    border-radius: 12px;
    top: 50%; /* Make it so that it covers the yes / no buttons lol */
    left: 50%;
    transform: translate(-50%, -50%);
    width: 300px; /* Need a specific value to work */
    height: 400px;
    background: white;
    border: 4px solid black;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

#dramatic-cat-gif {
    width: auto;
    height: 250px;
}

#happy-cat-gif {
    width: auto;
    height: 250px;
}

.dialog-text{
    text-align: center;
}

.close-btn-no{ /* Only for the "no" option */
    align-items: center;
    border: none;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    font-size: 1rem;
    width: fit-content;
    padding: 12px;
    border-radius: 8px;
    font-weight: bold;
    background: #FF6161;
    color: black;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.close-btn-yes{ /* Only for the "yes" option */
    margin-left: auto; /* These 2 margin properties pushes it to top right */
    margin-bottom: auto;

    align-items: center;
    border: none;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    font-size: 1rem;
    width: 2.5rem;
    padding: 7px;
    border-radius: 10px;
    font-weight: bold;
    background: #FF6161;
    color: black;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);

}

